
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


        <ImageView
            android:contentDescription="@string/descripImageTitular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dunkin_logo"
             />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">


        <Spinner
            android:gravity="start"
            android:id="@+id/spinnerGlaseadoDonuts"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"/>

        <RadioGroup
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupPedido">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:id="@+id/radioLocal"
                android:textColor="#FFFFFF"
                android:buttonTint="#FFFFFF"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domicilio"
                android:id="@+id/radioDomicilio"
                android:textColor="#FFFFFF"
                android:buttonTint="#FFFFFF"/>

        </RadioGroup>

    </LinearLayout>

    <Spinner
        android:layout_marginTop="20dp"
        android:id="@+id/spinnerRellenoDonuts"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <CheckBox
            android:id="@+id/checkBoxOreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oreo"
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF"/>
        <CheckBox
            android:id="@+id/checkBoxSprinkles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sprinkles"
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF"/>

    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonPedidoDonuts"
            android:text="@string/buttonPedidoDonuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/precioFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>


</LinearLayout>